--- a/src/prjmanager/components/styles/styles.css
+++ b/src/prjmanager/components/styles/styles.css
@@ -101,6 +101,17 @@
 }
 
 
+.no-visible-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+}
+
+.no-visible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+
   .main-panel {
     backdrop-filter: blur(10px);
     background-color: rgba(41, 155, 255, 0.1); /* Color azul claro con transparencia */
